--- a/faz_e_conta/data_hub/templates/show_students.html
+++ b/faz_e_conta/data_hub/templates/show_students.html
@@ -1,17 +1,13 @@
 <h1>Alunos</h1>
 <table>
     <tr>
-        <th>ID</th>
-        <th>Nome Proprio</th>
-        <th>Apelido</th>
-        <th>Processo</th>
+        {% for item in head %}
+        <th>{{ item }}</th>
+        {% endfor %}
     </tr>
-    {% for item in data %}
+    {% for item in data_dict %}
     <tr>
         <td>{{ item.aluno_id }}</td>
-        <td>{{ item.nome_proprio }}</td>
-        <td>{{ item.apelido }}</td>
-        <td>{{ item.processo }}</td>
     </tr>
     {% endfor %}
 </table>
