--- a/faz_e_conta/data_hub/templates/show_students.html
+++ b/faz_e_conta/data_hub/templates/show_students.html
@@ -5,7 +5,7 @@
     <tr style="background-color: #f2f2f2;">
         {% for item in head %}
             {% if item != id %}
-            <th style="border: 1px solid #ddd; padding: 10px;">{{ item }}</th>
+            <th style="border: 1px solid #ddd; padding: 10px;">{{ item|replace:"_, " }}</th>
             {% endif %}
         {% endfor %}
     </tr>
