limitação na pagina dos utilizadores

--- a/faz_e_conta/data_hub/templates/show_students.html
+++ b/faz_e_conta/data_hub/templates/show_students.html
@@ -8,6 +8,7 @@
             <th style="border: 1px solid #ddd; padding: 10px;">{{ item|replace:"_, " }}</th>
             {% endif %}
         {% endfor %}
+        <th style="border: 1px solid #ddd; padding: 10px;">Detalhes</th>
     </tr>
     {% for item in data_dict %}
     <tr style="background-color: {% cycle '#ffffff' '#f9f9f9' %};">
