--- a/faz_e_conta/data_hub/templates/show_student.html
+++ b/faz_e_conta/data_hub/templates/show_student.html
@@ -8,7 +8,7 @@
     <title>Student Information</title>
 </head>
 <body>
-    <h1>Student Information</h1>
+    <h1>{{data_dict.nome_proprio}} {{data_dict.apelido}}</h1>
     <table >
         {% for field in head %}
             {% if field != id %}
