--- a/faz_e_conta/data_hub/templates/show_students.html
+++ b/faz_e_conta/data_hub/templates/show_students.html
@@ -29,5 +29,8 @@
     </tr>
     {% endfor %}
 </table>
-<a href="{% url 'insert_student' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">
-    Inserir aluno</a>
+
+
+{% include 'links.html' %}
+{%block "links"%}
+{%endblock%}
