--- a/faz_e_conta/data_hub/templates/insert_aluno.html
+++ b/faz_e_conta/data_hub/templates/insert_aluno.html
@@ -79,7 +79,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type='submit'>Inserir</button>
-        <a href="{% url 'show_students' %}">Voltar</a>
+        <a href="{% url 'index' %}">Voltar</a>
     </form>
 </body>
 </html>
