--- a/faz_e_conta/data_hub/templates/show_vacinacao.html
+++ b/faz_e_conta/data_hub/templates/show_vacinacao.html
@@ -10,10 +10,10 @@
     <h1>{{ data_dict.nome_proprio }} {{ data_dict.apelido }}</h1>
     <table>
         {% for field in head %}
-            {% if field != 'id' %}
+            {% if field != id %}
                 <tr align='left'>
                     <th>{{ field|replace:'_, ' }}</th>
-                    {% if data_dict|get_item:zfield == None %}
+                    {% if data_dict|get_item:field == None %}
                         <td>
                             <hr style='border: none; border-top: 3px dashed black;'>
                         </td>
