--- a/faz_e_conta/data_hub/templates/show_salario.html
+++ b/faz_e_conta/data_hub/templates/show_salario.html
@@ -12,7 +12,7 @@
         {% for field in head %}
             {% if field != id %}
                 <tr align='left'>
-                    <th>{{ field|replace:'_, ' }}</th>
+                    <th>{{ field|replace:'_id_id, '|replace:'_, '}}</th>
                     {% if data_dict|get_item:field == None %}
                         <td>
                             <hr style='border: none; border-top: 3px dashed black;'>
