--- a/faz_e_conta/data_hub/templates/insert_student.html
+++ b/faz_e_conta/data_hub/templates/insert_student.html
@@ -1,3 +1,9 @@
+{% extends "base.html" %}
+
+{% block title %}Inserir Aluno{% endblock %}
+
+
+{% block content %}
 <h1>Inserir Aluno</h1>
 <form method="post">
     {% csrf_token %}
@@ -5,3 +11,5 @@
     <button type="submit">Inserir</button>
 </form>
 <a href="{% url 'show_students' %}">Voltar</a>
+
+{% endblock %}
