Responsavel educativo page

--- a/faz_e_conta/data_hub/templates/show_responsaveis_educativos.html
+++ b/faz_e_conta/data_hub/templates/show_responsaveis_educativos.html
@@ -1,8 +1,8 @@
 {% extends 'navigation.html' %}
 {% load custom_filters %}
 {%block links%}
-<h1>Alunos</h1>
-<p>Total de alunos: {{ data_dict|length }}</p>
+<h1>Responsaveis Educativos</h1>
+<p>Total de Responsaveis Educativos: {{ data_dict|length }}</p>
 <table style="width: 100%; border-collapse: collapse; text-align: left; font-family: Arial, sans-serif;">
     <tr style="background-color: #f2f2f2;">
         {% for item in head %}
@@ -26,7 +26,7 @@
             {% endif %}
         {% endfor %}
         <td>
-            <a href="{% url 'aluno_view' aluno_id=item.aluno_id %}">Ver detalhes</a>
+            <a href="{% url 'responsavel_educativo_view' responsavel_educativo_id=item.responsavel_educativo_id %}">Ver detalhes</a>
         </td>
     </tr>
     {% endfor %}
