--- a/faz_e_conta/data_hub/templates/navigation.html
+++ b/faz_e_conta/data_hub/templates/navigation.html
@@ -1,15 +1,34 @@
+<head>
+    <style>
+        .search{
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 15px;
+            width: 75%;
+            color: black;
+            text-decoration: none;
+            border-radius: 5px;"
+            height: 100;
+        }
+
+    </style>
 <table>
     <tr>
-        <td><center><a href="{% url 'show_students' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Alunos</a></center></td>
-        <td><center><a href="{% url 'insert_aluno_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Aluno</a></center></td>
-        <td><center><a href="{% url 'show_responsaveis_educativos' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Responsavel educativo</a></center></td>
+        <td><center><a href="{% url 'show_alunos' %}" class='search'>Alunos</a></center></td>
+        <td><center><a href="{% url 'show_responsaveis_educativos' %}" class='search'>Responsavel educativo</a></center></td>
     </tr>
 </table>
-{%block links%}
+<br>
+<table>
+    <tr>
+        <td><a href="{% url 'export' model=model %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color:rgb(244, 182, 58); color: white; text-decoration: none; border-radius: 5px;"><center>Backup</center></a></td>
+    </tr>
+</table>
+{% block links %}
 {% endblock %}
 <table>
     <tr>
-        <td><center><a href="{% url 'show_students' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Alunos</a></center></td>
+        <td><center><a href="{% url 'show_alunos' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Alunos</a></center></td>
         <td><center><a href="{% url 'insert_aluno_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Aluno</a></center></td>
         <td><center><a href="{% url 'show_responsaveis_educativos' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Responsavel educativo</a></center></td>
     </tr>
