--- a/faz_e_conta/data_hub/templates/show_alunos.html
+++ b/faz_e_conta/data_hub/templates/show_alunos.html
@@ -3,6 +3,9 @@
 {%block links%}
 <h1>Alunos</h1>
 <p>Total de alunos: {{ data_dict|length }}</p>
+<a href="{% url 'export' model='Aluno' %}"><button>Exportar CSV</button></a>
+
+
 <table style="width: 100%; border-collapse: collapse; text-align: left; font-family: Arial, sans-serif;">
     <tr style="background-color: #f2f2f2;">
         {% for item in head %}
