Add page for table Finacas Aluno

--- a/faz_e_conta/data_hub/templates/base.html
+++ b/faz_e_conta/data_hub/templates/base.html
@@ -41,6 +41,7 @@
     <div class="navbar">
         <a href="{% url 'starter_page' %}">Home</a>
         <a href="{% url 'show_students' %}">Alunos</a>
+        <a href="{% url 'show_aluno_financas' %}">Finanças</a>
         <a href="#">More Options</a>
     </div>
 
