--- a/faz_e_conta/data_hub/templates/show_aluno_financas.html
+++ b/faz_e_conta/data_hub/templates/show_aluno_financas.html
@@ -1,29 +1,54 @@
+{% extends 'base.html' %}
 {% load custom_filters %}
+
+
+{% block content %}
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Aluno Financas Information</title>
 </head>
+
 <body>
     <h1>{{ data_dict.nome_proprio }} {{ data_dict.apelido }}</h1>
-    <table>
-        {% for field in head %}
-            {% if field != id %}
-                <tr align='left'>
-                    <th>{{ field|replace:'_id_id, '|replace:'_, '}}</th>
-                    {% if data_dict|get_item:field == None %}
-                        <td>
-                            <hr style='border: none; border-top: 3px dashed black;'>
-                        </td>
+
+    <table style="width: 100%; border-collapse: collapse; text-align: left; font-family: Arial, sans-serif;">
+        <thead>
+            <tr style="background-color: #f2f2f2;">
+                {% for item in head %}
+                {% if item != id %}
+                <th style="border: 1px solid #ddd; padding: 10px;">
+                    {{ item|replace:"_, " }}
+                </th>
+                {% endif %}
+                {% endfor %}
+
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in data_dict %}
+            <tr style="background-color: {% cycle '#ffffff' '#f9f9f9' %};">
+                {% for field in head %}
+                {% if field != id %}
+                <td>
+                    {% if item|get_item:field == None %}
+                    <hr style="border: none; border-top: 2px dashed black;">
                     {% else %}
-                        <td>{{ data_dict|get_item:field }}</td>
+                    {{ item|get_item:field }}
                     {% endif %}
-                </tr>
-            {% endif %}
-        {% endfor %}
+                </td>
+                {% endif %}
+                {% endfor %}
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
     <a href="{% url 'show_students' %}">Voltar</a>
 </body>
+
 </html>
+
+{% endblock %}
