--- a/faz_e_conta/data_hub/templates/show_responsavel_educativo.html
+++ b/faz_e_conta/data_hub/templates/show_responsavel_educativo.html
@@ -24,6 +24,6 @@
             {% endif %}
         {% endfor %}
     </table>
-    <a href="{% url 'show_students' %}">Voltar</a>
+    <a href="{% url 'index' %}">Voltar</a>
 </body>
 </html>
