--- a/faz_e_conta/data_hub/templates/show_all/show_alunos.html
+++ b/faz_e_conta/data_hub/templates/show_all/show_alunos.html
@@ -1,6 +1,6 @@
-{% extends 'navigation.html' %}
+{% extends 'show_all/show_all_functions.html' %}
 {% load custom_filters %}
-{%block links%}
+{%block content%}
 <h1>Alunos</h1>
 <p>Total de alunos: {{ data_dict|length }}</p>
 
