--- a/faz_e_conta/data_hub/templates/show_all/show_responsaveis_educativos.html
+++ b/faz_e_conta/data_hub/templates/show_all/show_responsaveis_educativos.html
@@ -1,7 +1,6 @@
-{% extends 'navigation.html' %}
+{% extends 'show_all/show_all_functions.html' %}
 {% load custom_filters %}
-
-{% block links %}
+{%block content%}
 <h1>Responsáveis Educativos</h1>
 <p>Total de Responsáveis Educativos: {{ data_dict|length }}</p>
 
