--- a/faz_e_conta/data_hub/templates/show_all/show_vacinas.html
+++ b/faz_e_conta/data_hub/templates/show_all/show_vacinas.html
@@ -1,6 +1,6 @@
-{% extends 'navigation.html' %}
+{% extends 'show_all/show_all_functions.html' %}
 {% load custom_filters %}
-{%block links%}
+{%block content%}
 <h1>Vacinações</h1>
 <p>Total de Vacinações: {{ data_dict|length }}</p>
 
