--- a/faz_e_conta/data_hub/templates/show_all/show_alunos.html
+++ b/faz_e_conta/data_hub/templates/show_all/show_alunos.html
@@ -32,4 +32,10 @@
     </tr>
     {% endfor %}
 </table>
+<br>
+<table>
+    <tr>
+        <td><a href="{% url 'insert_aluno_view' %}" class="search"><center>Inserir</center></a></td>
+    </tr>
+</table>
 {%endblock%}
