--- a/faz_e_conta/data_hub/templates/show_all/show_responsaveis_educativos.html
+++ b/faz_e_conta/data_hub/templates/show_all/show_responsaveis_educativos.html
@@ -32,4 +32,11 @@
     </tr>
     {% endfor %}
 </table>
+
+<br>
+<table>
+    <tr>
+        <td><a href="{% url 'insert_responsavel_educativo_view' %}" class="search"><center>Inserir</center></a></td>
+    </tr>
+</table>
 {% endblock %}
