--- a/faz_e_conta/data_hub/templates/insert_responsavel_educativo.html
+++ b/faz_e_conta/data_hub/templates/insert_responsavel_educativo.html
@@ -74,12 +74,13 @@
     </style>
 </head>
 <body>
-    <h1>Inserir Responsavel_educativo</h1>
+    <h1>Inserir Responsavel Educativo</h1>
     <form method='post'>
         {% csrf_token %}
         {{ form.as_p }}
         <button type='submit'>Inserir</button>
-        <a href="{% url 'index' %}">Voltar</a>
+        <br>
+        <a href='javascript:history.back()'>Voltar</a>
     </form>
 </body>
 </html>
