--- a/faz_e_conta/data_hub/templates/show_all/show_vacinas.html
+++ b/faz_e_conta/data_hub/templates/show_all/show_vacinas.html
@@ -32,10 +32,10 @@
     </tr>
     {% endfor %}
 </table>
-
 <table>
     <tr>
         <td><a href="{% url 'insert_vacinacao_view' %}" class="search"><center>Inserir</center></a></td>
+        <td><a href="{% url 'reports' model=model %}" class="search"><center>Relatorios</center></a></td>
     </tr>
 </table>
 
